# dyun-gu-dev

./: .dockerignore  .gitignore  AGENT.md  Cargo.toml  Dockerfile  README.md  deny.toml
.github/workflows/: ci.yml  nightly.yml  release.yml  sanitizers.yml
crates/dg-capi/: Cargo.toml  build.rs  cbindgen.toml
crates/dg-capi/examples/: basic.c  direct_backend.c  lifecycle.c
crates/dg-capi/include/: dg_capi.h
crates/dg-capi/src/: lib.rs
crates/dg-capi/tests/: abi_snapshot.rs  abi_snapshot.txt  concurrency.rs
crates/dg-cli/: Cargo.toml
crates/dg-cli/src/: lib.rs  main.rs  ops.rs
crates/dg-core/: Cargo.toml
crates/dg-core/src/: buffer.rs  core.rs  datatype.rs  device.rs  error.rs  lib.rs  media.rs  memory.rs  process_policy.rs  resource.rs  shape.rs  tensor.rs
crates/dg-core/tests/: core.rs  core6_baseline.rs  core6_properties.rs  core6_resource_policy.rs  core7_process_policy.rs
crates/dg-elements/: Cargo.toml
crates/dg-graph/: Cargo.toml
crates/dg-media/: Cargo.toml
crates/dg-media-avcodec/: Cargo.toml
crates/dg-media-avcodec/src/: external.rs  lib.rs
crates/dg-media/src/: async_core.rs  avcodec.rs  bridge.rs  diagnostics.rs  elements.rs  error_ctx.rs  format_map.rs  frame.rs  legacy.rs  lib.rs  media_meta.rs  ops.rs  planner.rs  profile.rs  session.rs  stats.rs  transcoder.rs
crates/dg-media/tests/: core6_media_bridge.rs  dependency_contract.rs  media_pipeline.rs  profile_matrix.rs  source_scan.rs
crates/dg-openvino/: Cargo.toml
crates/dg-openvino-sys/: Cargo.toml
crates/dg-openvino-sys/src/: lib.rs
crates/dg-openvino/src/: backend.rs  lib.rs
crates/dg-openvino/tests/: openvino_runtime.rs
crates/dg-openvino/tests/fixtures/: openvino_identity_f32.json
crates/dg-rknn/: Cargo.toml  build.rs
crates/dg-rknn-sys/: Cargo.toml
crates/dg-rknn/examples/: resnet50_board_test.rs
crates/dg-rknn/src/: backend.rs  io.rs  lib.rs
crates/dg-sophon/: Cargo.toml
crates/dg-sophon-sys/: Cargo.toml  build.rs
crates/dg-sophon/src/: backend.rs  convert.rs  lib.rs  validate.rs
crates/dg-sophon/tests/: no_hardware.rs
crates/dg-stream/: Cargo.toml
dev-docs/001_fix_avcodec_profile_plan/: 01_baseline_and_dependency_contract.md  02_integration_error_inventory.md  03_media_metadata_model.md  04_graph_and_stream_metadata_transport.md  05_profile_features_and_configuration.md  06_host_packet_image_bridge.md  07_external_memory_ownership_bridge.md  08_async_cores_and_element_pump.md  09_decode_encode_resize_elements.md  10_hardware_profile_integration.md  11_errors_diagnostics_and_observability.md  12_entrypoints_compatibility_and_examples.md  13_test_matrix_and_release.md  README.md
dev-docs/002_fix_avcodec_profile_plan2/: EXECUTION_STATUS.md  README.md  UP2-FFMPEG-01.md
dev-docs/003_fix_avcodec_profile_plan3/: 01_execution_contract_and_upstream_admission.md  02_current_implementation_audit_and_deletion.md  03_dependency_and_feature_migration.md  04_profile_configuration_and_mapping.md  05_video_sdk_service_and_lifecycle.md  06_high_level_request_mapping.md  07_packet_image_metadata_bridge.md  08_decode_encode_element_migration.md  09_image_processing_element_migration.md  10_transcoder_and_graph_migration.md  11_errors_reports_and_observability.md  12_multi_profile_and_hardware_production.md  13_entrypoints_legacy_and_examples.md  14_test_matrix_ci_and_real_media.md  15_release_acceptance_rollback_and_handoff.md  EXECUTION_STATUS.md  README.md  UPSTREAM_ISSUES.md
dev-docs/004_fix_avcodec_profile_plan4/: 01_current_state_and_rc2_admission.md  02_sdk_revision_tag_and_lock_migration.md  03_toolchain_and_platform_environment.md  04_high_level_sdk_boundary_regression.md  05_native_free_software_and_multi_profile_revalidation.md  06_nv_host_device_frame_production_signoff.md  07_external_memory_bridge_and_zero_copy.md  08_ci_release_artifact_and_required_checks.md  09_status_handoff_and_document_cleanup.md  10_rc2_acceptance_stable_upgrade_and_rollback.md  11_execution_order_and_final_acceptance.md  AVCODEC_RC2_ACCEPTANCE.md  EXECUTION_STATUS.md  README.md  ROLLBACK.md  UPSTREAM_ISSUES.md  UPSTREAM_LOCAL_DEBUG.md
dev-docs/005_intel_openvino_product_ready_plan/: 01_current_state_and_release_admission.md  02_toolchain_quality_and_reproducibility.md  03_running_graph_lifecycle_and_supervisor.md  04_transactional_hot_reload.md  05_real_stream_connector_and_reconnect.md  06_openvino_cpu_igpu_production.md  07_async_inference_backpressure_and_copy_metrics.md  08_operations_observability_and_security.md  09_cabi_v1_and_resource_contract.md  10_oci_ci_hardware_and_release.md  11_execution_order_and_final_acceptance.md  EXECUTION_STATUS.md  OPENVINO_LOCAL_DEBUG.md  OPENVINO_PRODUCT_ACCEPTANCE.md  README.md  RELEASE_EVIDENCE_TEMPLATE.md  ROLLBACK.md  UPSTREAM_ISSUES.md
dev-docs/006_core_modules_product_ready_plan/: 01_current_state_risk_inventory_and_admission.md  02_resource_policy_and_untrusted_input_limits.md  03_core_memory_tensor_and_media_invariants.md  04_runtime_scheduler_and_metrics.md  05_graph_execution_lifecycle_and_reload.md  06_media_stream_and_cancellable_io.md  07_elements_correctness_and_fault_containment.md  08_cabi_v2_ownership_and_threading.md  09_observability_security_and_failure_semantics.md  10_verification_ci_fuzz_and_soak.md  11_execution_order_and_final_acceptance.md  ADMISSION_BASELINE.md  CORE_PRODUCT_ACCEPTANCE.md  CORE_RISK_REGISTER.md  C_ABI_V2_MIGRATION.md  EXECUTION_STATUS.md  README.md  RELEASE_EVIDENCE_TEMPLATE.md  ROLLBACK.md  UPSTREAM_ISSUES.md
dev-docs/007_core_modules_product_ready_closure_plan/: 01_plan6_gap_audit_and_admission.md  02_process_policy_and_bootstrap.md  03_bounded_model_tensor_frame_and_device_io.md  ADMISSION_BASELINE.md  (+17 more)
docs/: design-remaining-tasks.md  design.md  support-matrix.md  user-guide.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: capi_external_descriptor.rs  capi_load_string.rs  graph_spec.rs  media_metadata.rs  reload_transitions.rs  runtime_backend_options.rs  tensor_shape_stride.rs
scripts/: env-software-avcodec.sh
tools/: core7_baseline.sh  package_smoke.sh  soak.sh
(+73 files in other folders)
