[package]
name = "dg-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
dg-capi = { path = "../crates/dg-capi" }
dg-graph = { path = "../crates/dg-graph" }
dg-runtime = { path = "../crates/dg-runtime" }
libfuzzer-sys = "0.4"
serde_json = "1"

[[bin]]
name = "graph-spec"
path = "fuzz_targets/graph_spec.rs"
test = false
doc = false

[[bin]]
name = "capi-load-string"
path = "fuzz_targets/capi_load_string.rs"
test = false
doc = false

[[bin]]
name = "runtime-backend-options"
path = "fuzz_targets/runtime_backend_options.rs"
test = false
doc = false
