[package]
name = "dg-capi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
dg-core = { path = "../dg-core" }
dg-graph = { path = "../dg-graph" }
serde_json = { workspace = true }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cbindgen = "=0.29.4"
