[package]
name = "dg-capi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[features]
default = ["media", "stream"]
media = ["dep:dg-media"]
stream = ["dep:dg-stream", "media"]

# Internal avcodec SDK marker and profile features forwarded to dg-media.
avcodec-sdk = ["media", "dg-media/avcodec-sdk"]
avcodec = ["media", "dg-media/avcodec"]
avcodec-profile-native-free = ["media", "dg-media/avcodec-profile-native-free"]
avcodec-profile-software = ["media", "dg-media/avcodec-profile-software"]
avcodec-profile-rkmpp-host = ["media", "dg-media/avcodec-profile-rkmpp-host"]
avcodec-profile-rkmpp-host-fallback = ["media", "dg-media/avcodec-profile-rkmpp-host-fallback"]
avcodec-profile-nvcodec-host = ["media", "dg-media/avcodec-profile-nvcodec-host"]
avcodec-profile-nvcodec-host-fallback = ["media", "dg-media/avcodec-profile-nvcodec-host-fallback"]
avcodec-profile-onevpl-host = ["media", "dg-media/avcodec-profile-onevpl-host"]
avcodec-profile-onevpl-host-fallback = ["media", "dg-media/avcodec-profile-onevpl-host-fallback"]
avcodec-profile-amf-host = ["media", "dg-media/avcodec-profile-amf-host"]
avcodec-profile-amf-host-fallback = ["media", "dg-media/avcodec-profile-amf-host-fallback"]
avcodec-profile-rkmpp-zero-copy = ["media", "dg-media/avcodec-profile-rkmpp-zero-copy"]
avcodec-profile-nvcodec-device-frame = ["media", "dg-media/avcodec-profile-nvcodec-device-frame"]

# Legacy codec-* features.
codec-ffmpeg = ["media", "dg-media/codec-ffmpeg"]
codec-x264 = ["media", "dg-media/codec-x264"]
codec-x265 = ["media", "dg-media/codec-x265"]
codec-openh264 = ["media", "dg-media/codec-openh264"]
codec-rkmpp = ["media", "dg-media/codec-rkmpp"]
codec-librga = ["media", "dg-media/codec-librga"]
codec-nvcodec = ["media", "dg-media/codec-nvcodec"]
codec-onevpl = ["media", "dg-media/codec-onevpl"]
codec-amf = ["media", "dg-media/codec-amf"]

[dependencies]
dg-core = { path = "../dg-core" }
dg-graph = { path = "../dg-graph" }
dg-runtime = { path = "../dg-runtime" }
dg-media = { path = "../dg-media", optional = true }
dg-stream = { path = "../dg-stream", optional = true }
serde_json = { workspace = true }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cbindgen = "=0.29.4"
