[package]
name = "dg-capi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[features]
default = ["media", "stream"]
media = ["dep:dg-media"]
stream = ["dep:dg-stream", "media"]

# Internal avcodec SDK marker and profile features forwarded to dg-media.
avcodec-sdk = ["media", "dg-media/avcodec-sdk"]
avcodec = ["media", "dg-media/avcodec"]
avcodec-profile-native-free = ["media", "dg-media/avcodec-profile-native-free"]
avcodec-profile-software = ["media", "dg-media/avcodec-profile-software"]
avcodec-profile-rkmpp-host = ["media", "dg-media/avcodec-profile-rkmpp-host"]
avcodec-profile-rkmpp-host-fallback = ["media", "dg-media/avcodec-profile-rkmpp-host-fallback"]
avcodec-profile-nvcodec-host = ["media", "dg-media/avcodec-profile-nvcodec-host"]
avcodec-profile-nvcodec-host-fallback = ["media", "dg-media/avcodec-profile-nvcodec-host-fallback"]
avcodec-profile-onevpl-host = ["media", "dg-media/avcodec-profile-onevpl-host"]
avcodec-profile-onevpl-host-fallback = ["media", "dg-media/avcodec-profile-onevpl-host-fallback"]
avcodec-profile-amf-host = ["media", "dg-media/avcodec-profile-amf-host"]
avcodec-profile-amf-host-fallback = ["media", "dg-media/avcodec-profile-amf-host-fallback"]
avcodec-profile-rkmpp-zero-copy = ["media", "dg-media/avcodec-profile-rkmpp-zero-copy"]
avcodec-profile-nvcodec-device-frame = ["media", "dg-media/avcodec-profile-nvcodec-device-frame"]

# Production Intel edge runtime feature set (OpenVINO CPU/iGPU + Cheetah + Intel VPL hardware
# codec with ffmpeg/x264 software fallback).
product-intel = [
    "openvino",
    "stream",
    "dg-stream/cheetah",
    "media",
    "avcodec-profile-software",
    "avcodec-profile-onevpl-host-fallback",
]

openvino = ["dep:dg-openvino", "dg-openvino/backend"]

[dependencies]
dg-core = { path = "../dg-core" }
dg-graph = { path = "../dg-graph" }
dg-runtime = { path = "../dg-runtime" }
dg-media = { path = "../dg-media", optional = true }
dg-stream = { path = "../dg-stream", optional = true }
dg-openvino = { path = "../dg-openvino", optional = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cbindgen = "=0.29.4"
