[package]
name = "dg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dg-elements = { path = "../dg-elements" }
dg-graph = { path = "../dg-graph" }
dg-runtime = { path = "../dg-runtime" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
