[package]
name = "dg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["media", "stream"]
media = ["dep:dg-media"]
stream = ["dep:dg-stream", "media"]

# Internal avcodec SDK marker and profile features forwarded to dg-media.
avcodec-sdk = ["media", "dg-media/avcodec-sdk"]
avcodec = ["media", "dg-media/avcodec"]
avcodec-profile-native-free = ["media", "dg-media/avcodec-profile-native-free"]
avcodec-profile-software = ["media", "dg-media/avcodec-profile-software"]
avcodec-profile-rkmpp-host = ["media", "dg-media/avcodec-profile-rkmpp-host"]
avcodec-profile-rkmpp-host-fallback = ["media", "dg-media/avcodec-profile-rkmpp-host-fallback"]
avcodec-profile-nvcodec-host = ["media", "dg-media/avcodec-profile-nvcodec-host"]
avcodec-profile-nvcodec-host-fallback = ["media", "dg-media/avcodec-profile-nvcodec-host-fallback"]
avcodec-profile-onevpl-host = ["media", "dg-media/avcodec-profile-onevpl-host"]
avcodec-profile-onevpl-host-fallback = ["media", "dg-media/avcodec-profile-onevpl-host-fallback"]
avcodec-profile-amf-host = ["media", "dg-media/avcodec-profile-amf-host"]
avcodec-profile-amf-host-fallback = ["media", "dg-media/avcodec-profile-amf-host-fallback"]
avcodec-profile-rkmpp-zero-copy = ["media", "dg-media/avcodec-profile-rkmpp-zero-copy"]
avcodec-profile-nvcodec-device-frame = ["media", "dg-media/avcodec-profile-nvcodec-device-frame"]

# Production Intel edge runtime feature set (OpenVINO CPU/iGPU + Cheetah + software H.264).
product-intel = [
    "openvino",
    "stream",
    "dg-stream/cheetah",
    "media",
    "avcodec-profile-software",
]

openvino = ["dep:dg-openvino", "dg-openvino/backend"]
rknn = ["dep:dg-rknn", "dg-rknn/backend"]
tensorrt = ["dep:dg-tensorrt", "dg-tensorrt/backend"]
sophon = ["dep:dg-sophon", "dg-sophon/backend"]
sophon-soc = ["sophon", "dg-sophon/soc"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
signal-hook = "0.3"
tiny_http = "0.12.0"
dg-elements = { path = "../dg-elements" }
dg-core = { path = "../dg-core" }
dg-graph = { path = "../dg-graph" }
dg-media = { path = "../dg-media", optional = true }
dg-stream = { path = "../dg-stream", optional = true }
dg-openvino = { path = "../dg-openvino", optional = true, default-features = false }
dg-rknn = { path = "../dg-rknn", optional = true, default-features = false }
dg-runtime = { path = "../dg-runtime" }
dg-sophon = { path = "../dg-sophon", optional = true, default-features = false }
dg-tensorrt = { path = "../dg-tensorrt", optional = true, default-features = false }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
