[package]
name = "dg-media-avcodec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []

# Internal marker: enables the avcodec SDK dependency without selecting a profile.
avcodec-sdk = ["dep:avcodec"]

# Legacy alias mapping to the native-free compatibility profile.
avcodec = ["avcodec-profile-native-free"]

# Profile features (each depends on the SDK marker and upstream profile presets).
avcodec-profile-native-free = ["avcodec-sdk", "avcodec/profile-native-free"]
avcodec-profile-software = ["avcodec-sdk", "avcodec/profile-software"]
avcodec-profile-rkmpp-host = ["avcodec-sdk", "avcodec/profile-rkmpp-host"]
avcodec-profile-rkmpp-host-fallback = ["avcodec-sdk", "avcodec/profile-rkmpp-host-fallback"]
avcodec-profile-nvcodec-host = ["avcodec-sdk", "avcodec/profile-nvcodec-host"]
avcodec-profile-nvcodec-host-fallback = ["avcodec-sdk", "avcodec/profile-nvcodec-host-fallback"]
avcodec-profile-onevpl-host = ["avcodec-sdk", "avcodec/profile-onevpl-host"]
avcodec-profile-onevpl-host-fallback = ["avcodec-sdk", "avcodec/profile-onevpl-host-fallback"]
avcodec-profile-amf-host = ["avcodec-sdk", "avcodec/profile-amf-host"]
avcodec-profile-amf-host-fallback = ["avcodec-sdk", "avcodec/profile-amf-host-fallback"]
avcodec-profile-rkmpp-zero-copy = ["avcodec-sdk", "avcodec/profile-rkmpp-zero-copy"]
avcodec-profile-nvcodec-device-frame = ["avcodec-sdk", "avcodec/profile-nvcodec-device-frame"]

# Legacy codec-* features retain direct backend enable semantics.
codec-ffmpeg = ["avcodec-sdk", "avcodec/ffmpeg"]
codec-x264 = ["avcodec-sdk", "avcodec/x264"]
codec-x265 = ["avcodec-sdk", "avcodec/x265"]
codec-openh264 = ["avcodec-sdk", "avcodec/openh264"]
codec-rkmpp = ["avcodec-sdk", "avcodec/rkmpp"]
codec-librga = ["avcodec-sdk", "avcodec/librga"]
codec-nvcodec = ["avcodec-sdk", "avcodec/nvcodec"]
codec-onevpl = ["avcodec-sdk", "avcodec/onevpl"]
codec-amf = ["avcodec-sdk", "avcodec/amf"]

[dependencies]
avcodec = { git = "https://github.com/TimothyWalker6922/avcodec-rs-develop.git", rev = "fc728aa9ea3e0a85401d2cd4de1b762ffcf92a51", package = "avcodec", default-features = false, optional = true }