[package]
name = "dg-media-avcodec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []

# Internal marker: enables the avcodec SDK dependency without selecting a profile.
avcodec-sdk = ["dep:avcodec"]

# Profile features (each depends on the SDK marker and upstream profile presets).
avcodec-profile-native-free = ["avcodec-sdk", "avcodec/profile-native-free"]
avcodec-profile-software = ["avcodec-sdk", "avcodec/profile-software"]
avcodec-profile-rkmpp-host = ["avcodec-sdk", "avcodec/profile-rkmpp-host"]
avcodec-profile-rkmpp-host-fallback = ["avcodec-sdk", "avcodec/profile-rkmpp-host-fallback"]
avcodec-profile-nvcodec-host = ["avcodec-sdk", "avcodec/profile-nvcodec-host"]
avcodec-profile-nvcodec-host-fallback = ["avcodec-sdk", "avcodec/profile-nvcodec-host-fallback"]
avcodec-profile-onevpl-host = ["avcodec-sdk", "avcodec/profile-onevpl-host"]
avcodec-profile-onevpl-host-fallback = ["avcodec-sdk", "avcodec/profile-onevpl-host-fallback"]
avcodec-profile-amf-host = ["avcodec-sdk", "avcodec/profile-amf-host"]
avcodec-profile-amf-host-fallback = ["avcodec-sdk", "avcodec/profile-amf-host-fallback"]
avcodec-profile-rkmpp-zero-copy = ["avcodec-sdk", "avcodec/profile-rkmpp-zero-copy"]
avcodec-profile-nvcodec-device-frame = ["avcodec-sdk", "avcodec/profile-nvcodec-device-frame"]

[dependencies]
avcodec = { git = "https://github.com/TimothyWalker6922/avcodec-rs-develop.git", rev = "cff861a8893c3391fafce7815f24be42cc9554d2", package = "avcodec", default-features = false, optional = true }
