[package]
name = "dg-media"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
avcodec = ["dep:dg-media-avcodec", "dg-media-avcodec/avcodec"]
codec-ffmpeg = ["avcodec", "dg-media-avcodec/codec-ffmpeg"]
codec-x264 = ["avcodec", "dg-media-avcodec/codec-x264"]
codec-x265 = ["avcodec", "dg-media-avcodec/codec-x265"]
codec-openh264 = ["avcodec", "dg-media-avcodec/codec-openh264"]
codec-rkmpp = ["avcodec", "dg-media-avcodec/codec-rkmpp"]
codec-librga = ["avcodec", "dg-media-avcodec/codec-librga"]
codec-nvcodec = ["avcodec", "dg-media-avcodec/codec-nvcodec"]
codec-onevpl = ["avcodec", "dg-media-avcodec/codec-onevpl"]
codec-amf = ["avcodec", "dg-media-avcodec/codec-amf"]

[dependencies]
dg-core = { path = "../dg-core" }
dg-graph = { path = "../dg-graph" }
dg-runtime = { path = "../dg-runtime" }
dg-scheduler = { path = "../dg-scheduler" }
inventory.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dependencies.dg-media-avcodec]
path = "../dg-media-avcodec"
optional = true

[dev-dependencies]
proptest.workspace = true
