[package]
name = "dg-media"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []

# Internal marker: enables dg-media-avcodec integration without selecting a profile.
avcodec-sdk = ["dep:dg-media-avcodec", "dg-media-avcodec/avcodec-sdk"]

# Legacy alias mapping to the native-free compatibility profile.
avcodec = ["avcodec-profile-native-free"]

# Profile features forwarded to dg-media-avcodec.
avcodec-profile-native-free = ["avcodec-sdk", "dg-media-avcodec/avcodec-profile-native-free"]
avcodec-profile-software = ["avcodec-sdk", "dg-media-avcodec/avcodec-profile-software"]
avcodec-profile-rkmpp-host = ["avcodec-sdk", "dg-media-avcodec/avcodec-profile-rkmpp-host"]
avcodec-profile-rkmpp-host-fallback = [
    "avcodec-sdk",
    "dg-media-avcodec/avcodec-profile-rkmpp-host-fallback",
]
avcodec-profile-nvcodec-host = ["avcodec-sdk", "dg-media-avcodec/avcodec-profile-nvcodec-host"]
avcodec-profile-nvcodec-host-fallback = [
    "avcodec-sdk",
    "dg-media-avcodec/avcodec-profile-nvcodec-host-fallback",
]
avcodec-profile-onevpl-host = ["avcodec-sdk", "dg-media-avcodec/avcodec-profile-onevpl-host"]
avcodec-profile-onevpl-host-fallback = [
    "avcodec-sdk",
    "dg-media-avcodec/avcodec-profile-onevpl-host-fallback",
]
avcodec-profile-amf-host = ["avcodec-sdk", "dg-media-avcodec/avcodec-profile-amf-host"]
avcodec-profile-amf-host-fallback = [
    "avcodec-sdk",
    "dg-media-avcodec/avcodec-profile-amf-host-fallback",
]
avcodec-profile-rkmpp-zero-copy = ["avcodec-sdk", "dg-media-avcodec/avcodec-profile-rkmpp-zero-copy"]
avcodec-profile-nvcodec-device-frame = [
    "avcodec-sdk",
    "dg-media-avcodec/avcodec-profile-nvcodec-device-frame",
]

[dependencies]
dg-core = { path = "../dg-core" }
dg-graph = { path = "../dg-graph" }
dg-runtime = { path = "../dg-runtime" }
dg-scheduler = { path = "../dg-scheduler" }
inventory.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dependencies.dg-media-avcodec]
path = "../dg-media-avcodec"
optional = true

[dev-dependencies]
proptest.workspace = true