[package]
name = "dg-openvino-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
runtime-linking = ["dep:openvino", "openvino/runtime-linking"]

[dependencies]
openvino = { workspace = true, optional = true, default-features = false }
