[package]
name = "dg-openvino"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
backend = ["dep:dg-openvino-sys", "dg-openvino-sys/runtime-linking"]

[dependencies]
dg-core = { path = "../dg-core" }
dg-runtime = { path = "../dg-runtime" }
inventory.workspace = true
dg-openvino-sys = { path = "../dg-openvino-sys", optional = true }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
