[package]
name = "dg-rknn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
backend = ["dep:dg-rknn-sys", "dg-rknn-sys/backend"]

[dependencies]
dg-core = { path = "../dg-core" }
dg-runtime = { path = "../dg-runtime" }
dg-rknn-sys = { path = "../dg-rknn-sys", optional = true }
inventory.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[[example]]
name = "resnet50_board_test"
required-features = ["backend"]

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg"] }
