[package]
name = "dg-sophon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
backend = ["dep:dg-sophon-sys", "dg-sophon-sys/backend", "dep:libc"]
# Build for on-chip (SoC) deployment; the default targets Host (PCIe).
soc = ["backend", "dg-sophon-sys/soc"]

[dependencies]
dg-core = { path = "../dg-core" }
dg-runtime = { path = "../dg-runtime" }
dg-sophon-sys = { path = "../dg-sophon-sys", optional = true }
inventory.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
libc = { workspace = true, optional = true }
